# SafeHarborCLI

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md
contracts/: foundry.toml
contracts/src/: SafeHarborManifestRegistry.sol
contracts/test/: SafeHarborManifestRegistry.t.sol
docs/: agent-sdk.md  artifact-map.md  battlechain-adapter-requirements.md  battlechain-operations.md  command-model.md  dogfood-template.md  fresh-user-verification.md  invariant-taxonomy.md  quickstart.md  release-checklist.md  release-cut.md  review-workflow.md
docs/dogfood/: simple-vault-fixture.md
examples/golden/: simple-vault.safeharbor.manifest.json
safeharbor-cli/: Cargo.toml  safeharbor.toml  shcli.toml
safeharbor-cli/apps/cli/: Cargo.toml
safeharbor-cli/apps/cli/src/: main.rs
safeharbor-cli/apps/cli/tests/: docs.rs  smoke.rs
safeharbor-cli/crates/agent-sdk/: Cargo.toml
safeharbor-cli/crates/agent-sdk/examples/: simple_consumer.rs
safeharbor-cli/crates/agent-sdk/src/: error.rs  evidence.rs  filters.rs  index.rs  lib.rs  loader.rs  selectors.rs
safeharbor-cli/crates/agent-sdk/tests/: agent_sdk.rs  simple_consumer.rs
safeharbor-cli/crates/analyzer/: Cargo.toml
safeharbor-cli/crates/analyzer/src/: aderyn.rs  artifacts.rs  cache.rs  lib.rs  normalize.rs  project.rs  types.rs
safeharbor-cli/crates/battlechain-adapter/: Cargo.toml
safeharbor-cli/crates/battlechain-adapter/src/: binding.rs  client.rs  config.rs  defaults.rs  doctor.rs  errors.rs  lib.rs  prepare.rs  status.rs  types.rs
safeharbor-cli/crates/compiler/: Cargo.toml
safeharbor-cli/crates/compiler/src/: lib.rs
safeharbor-cli/crates/config/: Cargo.toml
safeharbor-cli/crates/config/src/: lib.rs
safeharbor-cli/crates/manifest/: Cargo.toml
safeharbor-cli/crates/manifest/src/: lib.rs
safeharbor-cli/crates/registry/: Cargo.toml
safeharbor-cli/crates/registry/src/: lib.rs
safeharbor-cli/crates/review-engine/: Cargo.toml
safeharbor-cli/crates/review-engine/src/: lib.rs  loader.rs  persistence.rs  projection.rs  prompts.rs  session.rs  taxonomy.rs  types.rs  validation.rs  view.rs
safeharbor-cli/crates/standards-recognizer/: Cargo.toml
safeharbor-cli/crates/standards-recognizer/src/: confidence.rs  lib.rs  signatures.rs  templates.rs  types.rs
safeharbor-cli/crates/standards-recognizer/src/recognizers/: access_control.rs  erc20.rs  erc4626.rs  mod.rs  ownable.rs  patterns.rs
safeharbor-cli/crates/standards-recognizer/tests/: erc4626_fixture.rs
safeharbor-cli/crates/standards-recognizer/tests/fixtures/: erc4626_expected_semantic_projection.json  erc4626_graph.json
safeharbor-cli/crates/structural-extractor/: Cargo.toml
safeharbor-cli/crates/structural-extractor/src/: lib.rs
safeharbor-cli/examples/foundry-simple-vault/: foundry.toml  safeharbor.toml
safeharbor-cli/examples/foundry-simple-vault/src/: SimpleVault.sol
safeharbor-cli/examples/foundry-simple-vault/testdata/: aderyn-report.json  expected.analysis.graph.json  expected.standards-recognition.json  expected.structural-candidates.json
safeharbor-cli/examples/simple-vault/: expected.safeharbor.manifest.json  expected.summary.md  safeharbor.input.json
safeharbor-cli/scripts/: verify-sample-workflow.sh
schemas/: safeharbor.manifest.schema.json
