[workspace]
members = [
  "apps/cli",
  "crates/battlechain-adapter",
  "crates/config",
  "crates/manifest",
  "crates/compiler",
  "crates/analyzer",
  "crates/registry",
  "crates/structural-extractor",
  "crates/standards-recognizer",
  "crates/review-engine"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
jsonschema = "0.46"
reqwest = { version = "0.13", features = ["blocking", "json"] }
