[package]
name = "shcli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
analyzer = { path = "../../crates/analyzer" }
battlechain-adapter = { path = "../../crates/battlechain-adapter" }
config = { path = "../../crates/config" }
compiler = { path = "../../crates/compiler" }
manifest = { path = "../../crates/manifest" }
registry = { path = "../../crates/registry" }
review-engine = { path = "../../crates/review-engine" }
structural-extractor = { path = "../../crates/structural-extractor" }
standards-recognizer = { path = "../../crates/standards-recognizer" }

[dev-dependencies]
serde_json.workspace = true
